RESOLVED FIXED142593
Many users of Heap::reportExtraMemory* are wrong, causing lots of memory growth
https://bugs.webkit.org/show_bug.cgi?id=142593
Summary Many users of Heap::reportExtraMemory* are wrong, causing lots of memory growth
Geoffrey Garen
Reported 2015-03-11 14:14:00 PDT
These users are wrong: JSReportExtraMemoryCost SparseArrayValueMap JSDocument JSImageData JSNodeList collectionindex canvas imageloader mediaelement sourcebuffer xmlhttprequest They only report cost upon allocation, not upon visit. This can cause lots of memory growth, since it makes the heap thing that eden collection is constantly succeeding in reclaiming huge amounts of memory.
Attachments
Patch (12.89 KB, patch)
2015-03-11 15:03 PDT, Geoffrey Garen
kling: review+
Geoffrey Garen
Comment 1 2015-03-11 15:03:23 PDT
Andreas Kling
Comment 2 2015-03-11 15:25:15 PDT
Comment on attachment 248455 [details] Patch r=me
Geoffrey Garen
Comment 3 2015-03-11 15:32:47 PDT
Note You need to log in before you can comment on or make changes to this bug.